# n-ary_python_package

./: .gitignore  COMPLETE_PACKAGE_GUIDE.md  MANIFEST.in  MANIFEST.md  README.md  README_NARY_TREE_API.md  SUMMARY.md  narytreemodule_unified.cpp  pyproject.toml  requirements.txt  run_tests.py  setup.py  succinct_narytree_unified.cpp  test_complete_api.py  test_package.py  test_succinct_narytree.py  test_unified_narytree.py  verify_complete_api.py  verify_package.py
narytree_src/: __init__.py  nary_tree.cpp  nary_tree_auto_rebalancing.cpp  narytreemodule.cpp  narytreemodule_auto_rebalancing.cpp  narytreemodule_unified.cpp  succinct_narytree_unified.cpp
tests/: __init__.py  test_narytree.py
